/*
 * Copyright (C) 2025 Kevin Buzeau
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
option java_multiple_files = true;

package com.buzbuz.smartautoclicker.core.smart.debugging;

import "ImageEventMessage.proto";
import "TriggerEventMessage.proto";

/** Base class for debug report messages abstraction. */
message DebugReportMessage {

    /** The time since current detection session start in milliseconds. */
    int64 relativeTimestampMs = 1;

    /** Declares all types of possible events. */
    oneof messageType {

        /** A screen frame has been processed. */
        ImageEventMessage imageEventMessage = 2;

        /** A trigger event has been triggered. */
        TriggerEventMessage triggerEventMessage = 3;
    }
}
